--- a/.github/workflows/terraform_plan_apply.yml
+++ b/.github/workflows/terraform_plan_apply.yml
@@ -1,4 +1,4 @@
-name: 'Terraform Plan/Apply Template'
+name: "Terraform Plan/Apply Template"
 
 on:
   workflow_call:
@@ -45,14 +45,14 @@ on:
 
 #These environment variables are used by the terraform azure provider to setup OIDC authentication.
 # env:
-  # ARM_CLIENT_ID: "${{ vars.ARM_CLIENT_ID }}"
-  # ARM_SUBSCRIPTION_ID: "${{ vars.ARM_SUBSCRIPTION_ID }}"
-  # ARM_CLIENT_SECRET: "${{ secrets.ARM_CLIENT_SECRET }}"
-  # ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
+# ARM_CLIENT_ID: "${{ vars.ARM_CLIENT_ID }}"
+# ARM_SUBSCRIPTION_ID: "${{ vars.ARM_SUBSCRIPTION_ID }}"
+# ARM_CLIENT_SECRET: "${{ secrets.ARM_CLIENT_SECRET }}"
+# ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
 
 jobs:
   terraform-plan:
-    name: 'Terraform Plan'
+    name: "Terraform Plan"
     runs-on: ubuntu-latest
     environment: ${{inputs.environment}}
     env:
@@ -68,92 +68,92 @@ jobs:
       tfplanExitCode: ${{ steps.tf-plan.outputs.exitcode }}
 
     steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
+      # Checkout the repository to the GitHub Actions runner
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    # Install the latest version of the Terraform CLI
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_wrapper: false
+      # Install the latest version of the Terraform CLI
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_wrapper: false
 
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      env:
-        BACKEND_STORAGE_ACCOUNT_NAME: ${{ vars.TERRAFORMBACKENDSTORAGEACCOUNT }}
-        BACKEND_CONTAINER_NAME: ${{ vars.TERRAFORMBACKENDSTORAGECONTAINER }}
-        BACKEND_RESOURCE_GROUP_NAME: ${{ vars.TERRAFORMBACKENDRESOURCEGROUP }}
-        BACKEND_SUBSCRIPTION_ID: ${{ vars.TERRAFORMBACKENDSUBSCRIPTIONID }}
-        # export -p && az login --service-principal --username $ARM_CLIENT_ID --password $ARM_CLIENT_SECRET --tenant $ARM_TENANT_ID &&
-      run: |
-        terraform -chdir=$WORKING_DIR init \
-          -backend-config="storage_account_name=${BACKEND_STORAGE_ACCOUNT_NAME}" \
-          -backend-config="container_name=${BACKEND_CONTAINER_NAME}" \
-          -backend-config="key=db/${ENVIRONMENT}/${{ inputs.key }}.tfstate" \
-          -backend-config="resource_group_name=${BACKEND_RESOURCE_GROUP_NAME}" \
-          -backend-config="subscription_id=${BACKEND_SUBSCRIPTION_ID}" \
+      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+      - name: Terraform Init
+        env:
+          BACKEND_STORAGE_ACCOUNT_NAME: ${{ vars.TERRAFORMBACKENDSTORAGEACCOUNT }}
+          BACKEND_CONTAINER_NAME: ${{ vars.TERRAFORMBACKENDSTORAGECONTAINER }}
+          BACKEND_RESOURCE_GROUP_NAME: ${{ vars.TERRAFORMBACKENDRESOURCEGROUP }}
+          BACKEND_SUBSCRIPTION_ID: ${{ vars.TERRAFORMBACKENDSUBSCRIPTIONID }}
+          # export -p && az login --service-principal --username $ARM_CLIENT_ID --password $ARM_CLIENT_SECRET --tenant $ARM_TENANT_ID &&
+        run: |
+          terraform -chdir=$WORKING_DIR init \
+            -backend-config="storage_account_name=${BACKEND_STORAGE_ACCOUNT_NAME}" \
+            -backend-config="container_name=${BACKEND_CONTAINER_NAME}" \
+            -backend-config="key=db/${ENVIRONMENT}/${{ inputs.key }}.tfstate" \
+            -backend-config="resource_group_name=${BACKEND_RESOURCE_GROUP_NAME}" \
+            -backend-config="subscription_id=${BACKEND_SUBSCRIPTION_ID}" \
 
-    # Checks that all Terraform configuration files adhere to a canonical format
-    # Will fail the build if not
-    - name: Terraform Format
-      run: terraform -chdir=$WORKING_DIR fmt -check
+      # Checks that all Terraform configuration files adhere to a canonical format
+      # Will fail the build if not
+      - name: Terraform Format
+        run: terraform -chdir=$WORKING_DIR fmt -check
 
-    # Generates an execution plan for Terraform
-    # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
-    - name: Terraform Plan
-      id: tf-plan
-      run: |
-        export exitcode=0
-        terraform -chdir=$WORKING_DIR plan -var="environment=${ENVIRONMENT}" -detailed-exitcode -no-color -out tfplan || export exitcode=$?
+      # Generates an execution plan for Terraform
+      # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
+      - name: Terraform Plan
+        id: tf-plan
+        run: |
+          export exitcode=0
+          terraform -chdir=$WORKING_DIR plan -var="environment=${ENVIRONMENT}" -detailed-exitcode -no-color -out tfplan || export exitcode=$?
 
-        echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
+          echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
 
-        if [ $exitcode -eq 1 ]; then
-          echo Terraform Plan Failed!
-          exit 1
-        else
-          exit 0
-        fi
+          if [ $exitcode -eq 1 ]; then
+            echo Terraform Plan Failed!
+            exit 1
+          else
+            exit 0
+          fi
 
-    # Save plan to artifacts
-    - name: Publish Terraform Plan
-      uses: actions/upload-artifact@v3
-      with:
-        name: ${{env.ENVIRONMENT}}_tfplan
-        path: ${{env.WORKING_DIR}}/tfplan
+      # Save plan to artifacts
+      - name: Publish Terraform Plan
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{env.ENVIRONMENT}}_tfplan
+          path: ${{env.WORKING_DIR}}/tfplan
 
-    # Create string output of Terraform Plan
-    - name: Create String Output
-      id: tf-plan-string
-      run: |
-        TERRAFORM_PLAN=$(terraform -chdir=$WORKING_DIR show -no-color tfplan)
+      # Create string output of Terraform Plan
+      - name: Create String Output
+        id: tf-plan-string
+        run: |
+          TERRAFORM_PLAN=$(terraform -chdir=$WORKING_DIR show -no-color tfplan)
 
-        delimiter="$(openssl rand -hex 8)"
-        echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
-        echo "## Terraform Plan Output" >> $GITHUB_OUTPUT
-        echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
-        echo "" >> $GITHUB_OUTPUT
-        echo '```terraform' >> $GITHUB_OUTPUT
-        echo "$TERRAFORM_PLAN" >> $GITHUB_OUTPUT
-        echo '```' >> $GITHUB_OUTPUT
-        echo "</details>" >> $GITHUB_OUTPUT
-        echo "${delimiter}" >> $GITHUB_OUTPUT
+          delimiter="$(openssl rand -hex 8)"
+          echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
+          echo "## Terraform Plan Output" >> $GITHUB_OUTPUT
+          echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
+          echo "" >> $GITHUB_OUTPUT
+          echo '```terraform' >> $GITHUB_OUTPUT
+          echo "$TERRAFORM_PLAN" >> $GITHUB_OUTPUT
+          echo '```' >> $GITHUB_OUTPUT
+          echo "</details>" >> $GITHUB_OUTPUT
+          echo "${delimiter}" >> $GITHUB_OUTPUT
 
-    # Publish Terraform Plan as task summary
-    - name: Publish Terraform Plan to Task Summary
-      env:
-        SUMMARY: ${{ steps.tf-plan-string.outputs.summary }}
-      run: |
-        echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
+      # Publish Terraform Plan as task summary
+      - name: Publish Terraform Plan to Task Summary
+        env:
+          SUMMARY: ${{ steps.tf-plan-string.outputs.summary }}
+        run: |
+          echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
 
-    # If this is a PR post the changes
-    - name: Push Terraform Output to PR
-      if: github.ref != 'refs/heads/main'
-      uses: actions/github-script@v6
-      env:
-        SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
-      with:
+      # If this is a PR post the changes
+      - name: Push Terraform Output to PR
+        if: github.ref != 'refs/heads/main'
+        uses: actions/github-script@v6
+        env:
+          SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
+        with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const body = `${process.env.SUMMARY}`;
@@ -165,7 +165,7 @@ jobs:
             })
 
   terraform-apply:
-    name: 'Terraform Apply'
+    name: "Terraform Apply"
     if: github.ref == 'refs/heads/main' && needs.terraform-plan.outputs.tfplanExitCode == 2
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
@@ -181,38 +181,38 @@ jobs:
       ENVIRONMENT: ${{ vars.ENVIRONMENT }}
 
     steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
+      # Checkout the repository to the GitHub Actions runner
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
+      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
 
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      env:
-        BACKEND_STORAGE_ACCOUNT_NAME: ${{ vars.TERRAFORMBACKENDSTORAGEACCOUNT }}
-        BACKEND_CONTAINER_NAME: ${{ vars.TERRAFORMBACKENDSTORAGECONTAINER }}
-        BACKEND_RESOURCE_GROUP_NAME: ${{ vars.TERRAFORMBACKENDRESOURCEGROUP }}
-        BACKEND_SUBSCRIPTION_ID: ${{ vars.TERRAFORMBACKENDSUBSCRIPTIONID }}
-        # export -p && az login --service-principal --username $ARM_CLIENT_ID --password $ARM_CLIENT_SECRET --tenant $ARM_TENANT_ID &&
-      run: |
-        terraform -chdir=$WORKING_DIR init \
-          -backend-config="storage_account_name=${BACKEND_STORAGE_ACCOUNT_NAME}" \
-          -backend-config="container_name=${BACKEND_CONTAINER_NAME}" \
-          -backend-config="key=db/${ENVIRONMENT}/${{ inputs.key }}.tfstate" \
-          -backend-config="resource_group_name=${BACKEND_RESOURCE_GROUP_NAME}" \
-          -backend-config="subscription_id=${BACKEND_SUBSCRIPTION_ID}" \
+      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+      - name: Terraform Init
+        env:
+          BACKEND_STORAGE_ACCOUNT_NAME: ${{ vars.TERRAFORMBACKENDSTORAGEACCOUNT }}
+          BACKEND_CONTAINER_NAME: ${{ vars.TERRAFORMBACKENDSTORAGECONTAINER }}
+          BACKEND_RESOURCE_GROUP_NAME: ${{ vars.TERRAFORMBACKENDRESOURCEGROUP }}
+          BACKEND_SUBSCRIPTION_ID: ${{ vars.TERRAFORMBACKENDSUBSCRIPTIONID }}
+          # export -p && az login --service-principal --username $ARM_CLIENT_ID --password $ARM_CLIENT_SECRET --tenant $ARM_TENANT_ID &&
+        run: |
+          terraform -chdir=$WORKING_DIR init \
+            -backend-config="storage_account_name=${BACKEND_STORAGE_ACCOUNT_NAME}" \
+            -backend-config="container_name=${BACKEND_CONTAINER_NAME}" \
+            -backend-config="key=db/${ENVIRONMENT}/${{ inputs.key }}.tfstate" \
+            -backend-config="resource_group_name=${BACKEND_RESOURCE_GROUP_NAME}" \
+            -backend-config="subscription_id=${BACKEND_SUBSCRIPTION_ID}" \
 
-    # Download saved plan from artifacts
-    - name: Download Terraform Plan
-      uses: actions/download-artifact@v3
-      with:
-        name: ${{env.ENVIRONMENT}}_tfplan
-        path: ${{env.WORKING_DIR}}
+      # Download saved plan from artifacts
+      - name: Download Terraform Plan
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{env.ENVIRONMENT}}_tfplan
+          path: ${{env.WORKING_DIR}}
 
-    # Terraform Apply
-    - name: Terraform Apply
-      run: |
-        terraform -chdir=$WORKING_DIR apply -auto-approve tfplan
+      # Terraform Apply
+      - name: Terraform Apply
+        run: |
+          terraform -chdir=$WORKING_DIR apply -auto-approve tfplan
